Removing a monitor in the OS dispaly configuration causes assertion fails under Windows if D3D is on

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: 9
    • Component/s: client-libs
    • 2d
    • b140
    • generic
    • windows

      Display reconfiguration that removes monitor device causes assertion exception in JDK. As result the corresponding graphics device is not removed.

            Assignee:
            Semyon Sadetsky (Inactive)
            Reporter:
            Semyon Sadetsky (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: