8155753: Removing a monitor in the OS dispaly configuration causes assertion fails under Windows if D3D is on

Reviewed-by: vadim, serb